# tokenizers_cpp

./: .clang-format  CLIPTokenizerFast.h  CMakeLists.txt  bert_tokenizer.h  bert_tokenizer_decoder.h  bert_tokenizer_encoder.h  clip_tokenizer.h  common.h  export_CLIPTokenizer.py  main.cpp  requirements.txt  tokenizers.cpp
models/: CLIPTokenizerFast.onnx
